<resources>
    <string name="app_name">Music Switcher</string>
    <string name="Welcome">Welcome, Friend!</string>
    <string name="your_music_provider">Choose your favorite music provider</string>
    <string name="no_name" />
    <string name="spotify_Btn">makes Spotify your main music provider </string>
    <string name="appleMusic_Btn">makes Apple music your main music provider </string>
    <string name="anghami_Btn"> makes Anghami your main music provider </string>
    <string name="deezer_Btn"> makes Deezer your main music provider </string>
    <string name="ytMusic_Btn"> makes Youtube Music your main music provider </string>
    <string name="i_will_try_to_redirect_all_links_to_the_preferred_music_provider">I will try to redirect all links to the preferred music provider</string>
    <string name="update_choice">Update choice</string>
    <string name="explain_choice">Setup steps!</string>
    <string name="explain_steps">\1 - Go to the settings and find this app and enable all the links (EXCEPT the music app you use daily)\n\nSo If you use Spotify. do not enable Spotify link of this app\n(This is to prevent this app opening if you click Spotify link)\n\n\n2 - If you have other music APPS in your phone. Go to their settings and turn off their links.\nEX:\nSo If you have both Apple Music app and Spotify. and you use Spotify for your music\n\nTurn off apple music links from the phone settings.\nOr delete the app that works too :)
    </string>
    <string name="optional_methods">Search for Albums or Playlist\n(If off I will open the original App)</string>
    <string name="playlist">Playlist</string>
    <string name="album">Album</string>
    <string name="explain_dialog_title">What to do</string>
    <string name="explain_positive_btn">Done</string>
    <string name="data_updated_toast">Music provider updated</string>
    <string name="chose_first_toast"><![CDATA[Please choose a music provider first Also change (APP URLS) -> Checkout Setup Steps button!]]></string>
    <string name="title_activity_main_ui">Music Switcher</string>

    <!--Compose Screens Navigation -->
    <string name="nav_main">Main Screen</string>
    <string name="nav_options">Options</string>
    <string name="nav_about">About</string>
    <!--Compose Screens Navigation end -->

    <string name="about_app_heading">About this App</string>
    <string name="about_this_app">This app searches songs for you from other music providers links, in your favorite music provider, So If you see a link of other music providers just click it and the app will try to search for it.</string>
    <string name="dev_name">Saleh Alanazi</string>
    <string name="about_developer">I\'m a Software Engineer from Saudi Arabia. I\'ve been developing Android applications since 2013 and professionally since 2015.\n\nClick the image to see my public projects on Github</string>
    <string name="about_dev_heading">About the Developer</string>
    <string name="mainscreen_album_playlist_text">Search for albums and playlists</string>
    <string name="mainscreen_heading">Enjoy Music ;)</string>
    <string name="mainscreen_update_pref_btn">Update Preferences</string>
    <string name="optionScreen_update_Exceptions">Update Exceptions</string>
    <string name="optionScreen_explain">Here you can disable redirecting for a single provider (useful if a song is only available in one provider only)</string>
    <string name="musicprovider_text">Music Provider</string>
    <string name="exception_status">Current Status</string>
    <string name="optionsScreen_heading">Options and Exceptions</string>
    <string name="main_screen_info_icon">How to use the app</string>
</resources>