<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary"
        tools:context=".MainActivity"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      >

        <TextView
            android:id="@+id/textView"
            style="@style/header_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Welcome" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/sub_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/custom_vertical_spacing"
            android:text="@string/your_music_provider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/spotifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/spotify_Btn"
                app:srcCompat="@drawable/spotifyIcon"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/applemusicBtn"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/appleMusic_Btn"
                app:srcCompat="@drawable/appleMusicIcon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/anghamiBtn"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/anghami_Btn"
                app:srcCompat="@drawable/anghami"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/deezerBtn"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/deezer_Btn"
                app:srcCompat="@drawable/deezer"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/ytmusicBtn"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/ytMusic_Btn"
                app:srcCompat="@drawable/ytMusicIcon"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2C96BC"
            android:text="@string/update_choice"
            android:textColor="@color/color_secondary"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                style="@style/sub_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/i_will_try_to_redirect_all_links_to_the_preferred_music_provider" />
        </LinearLayout>


    </LinearLayout>

